--- a/netbeans.apache.org/src/content/download/nb13/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb13/index.asciidoc
@@ -35,6 +35,11 @@ Welcome to Apache NetBeans 13!
 
 link:/download/nb13/nb13.html[Download, role="button success"]
 
+== Highlights
+ - Bundled nb-javac, startup experience simpler and smoother.
+ - Light FlatLaf look and feel by default.
+ - Partial upgrades for Maven, Gradle, and PHP.
+
 Note: The full list of pull requests integrated in the 13 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3ANB13[is found here], while they are listed by category below.
 
 == Java
