--- a/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
@@ -52,6 +52,8 @@ link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-bin.zip.asc[P
 link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe.asc[PGP ASC])
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh[Apache-NetBeans-13-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg[Apache-NetBeans-13-bin-macosx.dmg] (link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg.asc[PGP ASC])
 
 IMPORTANT: macOS installer is in progress, not available for release yet. In the meantime, you're advised to unzip the binary ZIP listed above.
 
