Changed link from Jira to GitHub

--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -44,7 +44,7 @@ You will need to follow this link:submit-pr.html#donating-code[donating code] pr
 == Validating issues
 
 You want to help but don't feel like writing code?
-Verify link:https://issues.apache.org/jira/projects/NETBEANS/issues[reported issues].
+Verify link:https://github.com/apache/netbeans/issues[reported issues].
 
 - Check that issues contain link:report-issue.html[information] necessary to reproduce the issue.
 - Check component assignment.
