--- a/netbeans.apache.org/src/content/download/nb14/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb14/index.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 14 was released.
+Apache NetBeans 14 was released on June 9, 2022.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
