--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 13
+
+Apache NetBeans 13 was released on March 4, 2022.
+
+link:/download/nb13/[Features, role="button"] link:/download/nb13/nb13.html[Download, role="button success"]
+
 == Apache NetBeans 12.6
 
 Apache NetBeans 12.6 was released on November 29, 2021.
