--- a/netbeans.apache.org/src/content/download/nb14/nb14.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb14/nb14.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 14 was released on June 9, 2022. link:https://github.com/apache/netbeans/pulls?q=is%3Apr+milestone%3ANB14+is%3Aclosed[Go here on GitHub] for a list of fixed issues for Apache NetBeans 14.
+Apache NetBeans 14 was released on June 9, 2022. link:https://github.com/apache/netbeans/releases/tag/14[Go here on GitHub] for a list of fixed issues for Apache NetBeans 14.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
