--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -45,8 +45,7 @@ link:/download/nb14/nb14.html[Download, role="button success"]
 
 == Older releases
 
-Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
-downloaded, but are no longer supported.
+Older Apache NetBeans releases can still be downloaded, but are no longer supported.
 
 link:/download/archive/index.html[Find out more, role="button"]
 
