missing convention files from submit-pr

--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -54,7 +54,7 @@ We appreciate new contributors to adhere to the following guidelines, to make th
 . Run unit tests and, if you introduce new feature/fixes, add unit tests. So *before you start your work*, check that unit tests for the module you are working on run correctly and *after you are done* keep doing.
   - If unit tests fail, fixing these would be a good addition to the code base (it would be good to use a separate commit for this)
 . Keep your pull requests up-to-date. When the PR can't be merged directly (it can happen that changes are introduced into the code base, that conflict with your PR) you should then update it accordingly.
-. Follow the coding conventions of the file. Your code should match that style and not stand out. For new files, please follow the link:https://netbeans.org/community/guidelines/code-conventions.html[code conventions for the NetBeans code base].
+. Follow the coding conventions of the file. Your code should match that style and not stand out. For new files, please follow the link:codeconventions.html[code conventions for the NetBeans code base].
 . Try to keep the code *readable, maintainable, easy to debug* and *performant*.
 
 == Learn to run and debug NetBeans IDE or Platform applications
