Update report-issue page (#603)
Update report-issue.asciidoc
 - increase probability that someone is reading the notes by moving the link down
 - emphasize "latest NetBeans" a little bit by linking to the download page since the user might not know what current is
 - add min JDK version

--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -23,16 +23,11 @@
 :keywords: Apache NetBeans issue report
 :description: Apache NetBeans Reporting Issues
 
-If you have found a bug in the application, please help Apache NetBeans by reporting this problem
-to link:https://github.com/apache/netbeans/issues[our issue tracking on GitHub].
 
-Thank you for helping us make Apache NetBeans better!
-
-== Note
-
-Please make sure the issue can be replicated with the latest Apache NetBeans release,
+Please make sure the issue can be replicated with the link:https://netbeans.apache.org/download/[latest] Apache NetBeans release
+running on a supported JDK version (currently Java 11+),
 and has not already been reported. Provide enough information for someone to be able
-to reproduce the problem. Sufficient information might include -
+to reproduce the problem. Sufficient information might include:
 
 - Example code (Attachments or Description)
 - Example project (Attachments)
@@ -45,3 +40,4 @@ to reproduce the problem. Sufficient information might include -
 
 link:https://github.com/apache/netbeans/issues[Report issue, role="button success"]
 
+Thank you for helping us make Apache NetBeans better!
