url for netbeans 15

--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -28,6 +28,12 @@
 
 Older Apache NetBeans releases can still be downloaded, but are no longer supported.
 
+== Apache NetBeans 14
+
+Apache NetBeans 14 was released on June 9, 2022.
+
+link:https://github.com/apache/netbeans/releases/tag/14[Features, role="button"] link:/download/nb14/[Download, role="button success"]
+
 == Apache NetBeans 13
 
 Apache NetBeans 13 was released on March 4, 2022.
