--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -37,11 +37,11 @@ for important requirements for download pages for Apache projects.
 
 Apache NetBeans is released four times a year. For details, see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
 
-== Apache NetBeans 14
+== Apache NetBeans 15
 
-Latest version of the IDE, released on June 9, 2022.
+Latest version of the IDE, released on August 31, 2022.
 
-link:/download/nb14/nb14.html[Download, role="button success"]
+link:/download/nb15/[Download, role="button success"]
 
 == Older releases
 
