--- a/netbeans.apache.org/src/content/download/nb14/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb14/index.asciidoc
@@ -33,30 +33,45 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 14 was released on June 9, 2022. link:https://github.com/apache/netbeans/releases/tag/14[Go here on GitHub] for a list of fixed issues for Apache NetBeans 14.
+// check version above
+:netbeans-version: 14
+:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://archive.apache.org/dist/netbeans/
+
+//// 
+url-status depends of release status archived or not
+https://archive.apache.org/dist/netbeans/  (//archived)
+https://www.apache.org/dyn/closer.cgi/netbeans/ (//current)
+
+url-download-keychecksum depends of release status archived or not
+https://archive.apache.org/dist/netbeans/  (//archived)
+https://downloads.apache.org/netbeans/ (//current)
+////
+
+Apache NetBeans {netbeans-version} was released on June 9, 2022. link:https://github.com/apache/netbeans/releases/tag/{netbeans-version}[Go here on GitHub] for a list of fixed issues for Apache NetBeans {netbeans-version}.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
 NOTE: It's NOT recommended to link to github.
 ////
-Apache NetBeans 14 is available for download from your closest Apache mirror.
+Apache NetBeans {netbeans-version} is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/14/netbeans-14-bin.zip[netbeans-14-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/14/netbeans-14-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/14/netbeans-14-bin.zip.asc[PGP ASC])
+link:{url-download}netbeans/{netbeans-version}/netbeans-{netbeans-version}-bin.zip[netbeans-{netbeans-version}-bin.zip] (link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-bin.zip.sha512[SHA-512],
+link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-windows-x64.exe[Apache-NetBeans-14-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-linux-x64.sh[Apache-NetBeans-14-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://archive.apache.org/dist/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-macosx.dmg[Apache-NetBeans-14-bin-macosx.dmg] (link:https://archive.apache.org/dist/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-macosx.dmg.sha512[SHA-512],
-link:https://archive.apache.org/dist/netbeans/netbeans-installers/14/Apache-NetBeans-14-bin-macosx.dmg.asc[PGP ASC])
+* link:{url-download}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-windows-x64.exe[Apache-NetBeans-{netbeans-version}-bin-windows-x64.exe] (link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-windows-x64.exe.sha512[SHA-512],
+link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-windows-x64.exe.asc[PGP ASC])
+* link:{url-download}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-linux-x64.sh[Apache-NetBeans-{netbeans-version}-bin-linux-x64.sh] (link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-linux-x64.sh.sha512[SHA-512],
+link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-linux-x64.sh.asc[PGP ASC])
+* link:{url-download}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-macosx.dmg[Apache-NetBeans-{netbeans-version}-bin-macosx.dmg] (link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-macosx.dmg.sha512[SHA-512],
+link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/Apache-NetBeans-{netbeans-version}-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/14/netbeans-14-source.zip[netbeans-14-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/14/netbeans-14-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/14/netbeans-14-source.zip.asc[PGP ASC])
+- Source: link:{url-download}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip[netbeans-{netbeans-version}-source.zip] (link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip.sha512[SHA-512],
+link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip.asc[PGP ASC])
 
 ////
 NOTE: Using https below is highly recommended.
@@ -81,20 +96,20 @@ experience (other JDK's may be used for projects).
 
 == Deployment Platforms
 
-The Apache NetBeans 14 binary releases require JDK 11+, and officially support running on JDK 11 and JDK 17.
+The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11 and JDK 17.
 
 TIP: The current JDKs have an issue on macOS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
 
 == Building from Source
 
-To build Apache NetBeans 14 from source you need:
+To build Apache NetBeans {netbeans-version} from source you need:
 
 . A distribution of OpenJDK 8 or 11.
 . Apache Ant 1.10 or greater (https://ant.apache.org).
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/14/netbeans-14-source.zip[netbeans-14-source.zip]
+1. Unzip link:{url-download}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip[netbeans-{netbeans-version}-source.zip]
 in a directory of your liking.
 
 [start=2]
