--- a/netbeans.apache.org/src/content/projects/platform/core/windowsystem/changes.asciidoc
+++ b/netbeans.apache.org/src/content/projects/platform/core/windowsystem/changes.asciidoc
@@ -30,7 +30,7 @@
 link:https://web.archive.org/web/20210306023217/https://core.netbeans.org/windowsystem/changes.html[Web archive]
 
 
-//// anchor to no forget
+// anchor to no forget
 
 [[2.3]]
 link:https://web.archive.org/web/20210306023217/https://core.netbeans.org/windowsystem/changes.html#2.3[Web archive]
