--- a/netbeans.apache.org/src/content/download/nb15/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb15/index.asciidoc
@@ -80,6 +80,8 @@ The PGP keys used to sign this release are available link:https://downloads.apac
 
 Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
+* Tip: Linux users: use the binary zip, link:https://snapcraft.io/netbeans[Snap], or our link:https://codelerity.com/netbeans[community installers] (there is a .deb without JDK too). This has been discussed on dev@ a little while back. Linux installer is a little broken and no-one has fixed it yet.
+
 == Community Installers
 
 IMPORTANT: Individual NetBeans committers may provide additional binary packages as a convenience.
