--- a/netbeans.apache.org/src/content/projects/platform/articles/installation.asciidoc
+++ b/netbeans.apache.org/src/content/projects/platform/articles/installation.asciidoc
@@ -30,7 +30,7 @@
 link:https://web.archive.org/web/20210118080511/https://platform.netbeans.org/articles/installation.html[Web archive]
 
 
-//// anchor to no forget
+// anchor to no forget
 [[launcher]]
 link:https://web.archive.org/web/20111223111616/http://openide.netbeans.org/proposals/actions/impl.html#launcher[Web archive]
 
