--- a/netbeans.apache.org/src/content/projects/ui/ws/ws_spec.asciidoc
+++ b/netbeans.apache.org/src/content/projects/ui/ws/ws_spec.asciidoc
@@ -29,12 +29,12 @@
 
 link:https://web.archive.org/web/20210118064428/https://ui.netbeans.org/docs/ui/ws/ws_spec.html[Web archive]
 
-//// anchor to no forget
-[[3.7]]
+// anchor to no forget
+[[s37]]
 link:https://web.archive.org/web/20210118064428/https://ui.netbeans.org/docs/ui/ws/ws_spec.html#3.7[Web archive]
 
-//// anchor to no forget
-[[3.9]]
+// anchor to no forget
+[[s39]]
 link:https://web.archive.org/web/20210118064428/https://ui.netbeans.org/docs/ui/ws/ws_spec.html#3.9[Web archive]
 
 
