--- a/netbeans.apache.org/src/content/projects/platform/openide/proposals/arch/cli.asciidoc
+++ b/netbeans.apache.org/src/content/projects/platform/openide/proposals/arch/cli.asciidoc
@@ -29,6 +29,6 @@
 
 link:https://web.archive.org/web/20210306060542/https://openide.netbeans.org/proposals/arch/cli.html[Web archive]
 
-//// anchor to no forget
+// anchor to no forget
 [[cli]]
 link:https://web.archive.org/web/20210306060542/https://openide.netbeans.org/proposals/arch/cli.html#cli[Web archive]
