--- a/netbeans.apache.org/src/content/projects/platform/openide/proposals/actions/impl.asciidoc
+++ b/netbeans.apache.org/src/content/projects/platform/openide/proposals/actions/impl.asciidoc
@@ -29,7 +29,7 @@
 
 link:https://web.archive.org/web/20111223111616/http://openide.netbeans.org/proposals/actions/impl.html[Web archive]
 
-//// anchor to no forget
+// anchor to no forget
 [[summaryAPI]]
 link:https://web.archive.org/web/20111223111616/http://openide.netbeans.org/proposals/actions/impl.html#summaryAPI[Web archive]
 
