--- a/netbeans.apache.org/src/content/projects/autoupdate/nbm/nbm_package.asciidoc
+++ b/netbeans.apache.org/src/content/projects/autoupdate/nbm/nbm_package.asciidoc
@@ -26,7 +26,7 @@
 :toclevels: 4
 :toc-title: 
 
-
-link:https://web.archive.org/web/20080705031908/http://autoupdate.netbeans.org/nbm/nbm_package.html[Web archive]
+[[structure]]
+link:https://web.archive.org/web/20080705031908/http://autoupdate.netbeans.org/nbm/nbm_package.html#structure[Web archive]
 
 
