using correct link in webarchive for translatedfile

--- a/netbeans.apache.org/src/content/projects/translatedfiles/index.asciidoc
+++ b/netbeans.apache.org/src/content/projects/translatedfiles/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= NetBeans: AutoUpdate NBM package technology
+= NetBeans: NetBeans Localization Project
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -27,6 +27,6 @@
 :toc-title: 
 
 
-link:https://web.archive.org/web/20080705031908/http://autoupdate.netbeans.org/nbm/nbm_package.html[Web archive]
+link:https://web.archive.org/web/20120629220200/http://nblocalization.netbeans.org/[Web archive]
 
 
