--- a/netbeans.apache.org/src/content/projects/platform/openide/proposals/actions/design.asciidoc
+++ b/netbeans.apache.org/src/content/projects/platform/openide/proposals/actions/design.asciidoc
@@ -26,7 +26,7 @@
 :toclevels: 4
 :toc-title: 
 
-//// anchor to no forget
+// anchor to no forget
 [[callback]]
 link:https://web.archive.org/web/20210127144457/http://openide.netbeans.org/proposals/actions/design.html#callback[Web archive]
 
