--- a/netbeans.apache.org/src/content/projects/buildsys/design.asciidoc
+++ b/netbeans.apache.org/src/content/projects/buildsys/design.asciidoc
@@ -29,7 +29,7 @@
 
 link:https://web.archive.org/web/20070929073058/http://projects.netbeans.org/buildsys/design.html[Web archive]
 
-//// anchor to no forget
+// anchor to no forget
 [[freeform]]
 link:https://web.archive.org/web/20070929073058/http://projects.netbeans.org/buildsys/design.html#freeform[Web archive]
 
