syntax highlighting and toc.

--- a/netbeans.apache.org/src/content/jackpot/HintsFileFormat.asciidoc
+++ b/netbeans.apache.org/src/content/jackpot/HintsFileFormat.asciidoc
@@ -21,10 +21,13 @@
 :jbake-type: page
 :jbake-tags: main
 :jbake-status: published
-:keywords: Apache NetBeans, Jackpot
+:keywords: Apache NetBeans, Jackpot, code inspection, refactoring
 :icons: font
+:syntax: true
 :description: Java Declarative Hints Language
 :source-highlighter: pygments
+:toc: left
+:toc-title:
 
 == Basic Structure
 
