--- a/netbeans.apache.org/src/content/jackpot/index.asciidoc
+++ b/netbeans.apache.org/src/content/jackpot/index.asciidoc
@@ -22,6 +22,7 @@
 :jbake-status: published
 :keywords: Apache NetBeans, Jackpot, refactoring, Java
 :icons: font
+:syntax: true
 :description: Java Declarative Hints
 :source-highlighter: pygments
 
@@ -49,7 +50,7 @@ To use run the declarative hints in a Maven project, add the tool to the build p
 <plugin>
     <groupId>org.apache.netbeans.modules.jackpot30</groupId>
     <artifactId>jackpot30-maven-plugin</artifactId>
-    <version>12.5</version>
+    <version>13.0</version>
 </plugin>
 ----
 
