--- a/netbeans.apache.org/src/content/404.adoc
+++ b/netbeans.apache.org/src/content/404.adoc
@@ -30,7 +30,7 @@
 
 We regret having to say that the page you requested does not longer exist.
 
-This may be a problem of ours, if so please feel free to xref:participate/report-issue.adoc[report an issue].
+This may be a problem of ours, if so please feel free to link:https://netbeans.apache.org/participate/report-issue.html[report an issue].
 
 == Main sections
 
@@ -38,18 +38,18 @@ This website is structured in these main sections:
 
 === Documentation
 
-* The main xref:help/index.adoc[documentation section].
-** xref:kb/docs/java/index.adoc[The Java SE Learning Trail].
-** xref:kb/docs/php/index.adoc[PHP and HTML5 Learning Trail].
-** xref:kb/docs/platform/index.adoc[The NetBeans Platform Learning Trail].
+* The main link:https://netbeans.apache.org/help/index.html[documentation section].
+** link:https://netbeans.apache.org/kb/docs/java/index.html[The Java SE Learning Trail].
+** link:https://netbeans.apache.org/kb/docs/php/index.html[PHP and HTML5 Learning Trail].
+** link:https://netbeans.apache.org/kb/docs/platform/index.html[The NetBeans Platform Learning Trail].
 
 === Other pages of interest:
 
-* Our xref:wiki/index.adoc[wiki is here].
-* See how to xref:community/index.adoc[participate in Apache NetBeans].
-** Join our xref:community/mailing-lists.adoc[mailing lists].
-** See how you can xref:participate/submit-pr.adoc[contribute code].
-** See how you can xref:kb/docs/contributing.adoc[contribute documentation].
+* Our link:https://netbeans.apache.org/wiki/index.html[wiki is here].
+* See how to link:https://netbeans.apache.org/community/index.html[participate in Apache NetBeans].
+** Join our link:https://netbeans.apache.org/community/mailing-lists.html[mailing lists].
+** See how you can link:https://netbeans.apache.org/participate/submit-pr.html[contribute code].
+** See how you can link:https://netbeans.apache.org/kb/docs/contributing.html[contribute documentation].
 ** Contribute a link:https://plugins.netbeans.apache.org/[plugin] in our website.
 
 
