--- a/netbeans.apache.org/src/content/index.adoc
+++ b/netbeans.apache.org/src/content/index.adoc
@@ -37,27 +37,27 @@
 
 [.card.blue]
 .icon:edit[] Fast & Smart Editing
-Apache NetBeans is much more than a text editor. It highlights source code link:/kb/docs/java/editor-codereference.html[syntactically and semantically], lets you easily link:/kb/docs/java/editor-inspect-transform.html[refactor code], with a range of handy and powerful tools.
+Apache NetBeans is much more than a text editor. It highlights source code xref:kb/docs/java/editor-codereference.adoc[syntactically and semantically], lets you easily xref:kb/docs/java/editor-inspect-transform.adoc[refactor code], with a range of handy and powerful tools.
 
 [.card.green]
 .icon:wrench[] Java, JavaScript, PHP, HTML5, CSS, and More
-Apache NetBeans provides editors, wizards, and templates to help you create applications in link:/kb/docs/java/index.html[Java], link:/kb/docs/php/index.html[PHP] and many other languages.
+Apache NetBeans provides editors, wizards, and templates to help you create applications in xref:kb/docs/java/index.adoc[Java], xref:kb/docs/php/index.adoc[PHP] and many other languages.
 
 [.card.magenta]
 .icon:download[] Cross Platform
-Apache NetBeans can be link:/download/index.html[installed] on all operating systems that support Java, i.e, Windows, Linux, Mac OSX and BSD. Write Once, Run Anywhere, applies to NetBeans too. 
+Apache NetBeans can be xref:download/index.adoc[installed] on all operating systems that support Java, i.e, Windows, Linux, Mac OSX and BSD. Write Once, Run Anywhere, applies to NetBeans too. 
 
 [.card.green]
 .icon:users[] Join us
-Subscribe to our link:/community/mailing-lists.html[mailing lists], or follow us in link:https://twitter.com/netbeans[Twitter], link:https://tinyurl.com/netbeans-slack-signup/[Slack], link:https://www.facebook.com/NetBeans[FaceBook] or link:https://www.youtube.com/user/netbeansvideos[YouTube].
+Subscribe to our xref:community/mailing-lists.adoc[mailing lists], or follow us in link:https://twitter.com/netbeans[Twitter], link:https://tinyurl.com/netbeans-slack-signup/[Slack], link:https://www.facebook.com/NetBeans[FaceBook] or link:https://www.youtube.com/user/netbeansvideos[YouTube].
 
 [.card.magenta]
 .icon:arrow-right[] Participate
-See how you can participate by link:/participate/submit-pr.html[submitting pull requests], link:participate/report-issue.html[filing issues], or joining the link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT[NetCAT] program.
+See how you can participate by xref:participate/submit-pr.adoc[submitting pull requests], xref:participate/report-issue.adoc[filing issues], or joining the link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT[NetCAT] program.
 
 [.card.blue]
 .icon:book[] Learn
-We are currently reviewing the tutorials. See how you can link:http://netbeans.apache.org/kb/docs/contributing.html[help us] review the link:http://netbeans.apache.org/kb/docs/java/[Java] and link:http://netbeans.apache.org/kb/docs/php/[PHP] tutorials.
+We are currently reviewing the tutorials. See how you can xref:kb/docs/contributing.adoc[help us] review the xref:kb/docs/java/index.adoc[Java] and xref:kb/docs/php/index.adoc[PHP] tutorials.
 
 
 ****
