--- a/netbeans.apache.org/src/content/community/nekobean.adoc
+++ b/netbeans.apache.org/src/content/community/nekobean.adoc
@@ -36,7 +36,7 @@ image::nekobean250x250.png[NekoBean, 250, 250, align="center"]
 image::https://licensebuttons.net/l/by-sa/2.1/jp/88x31.png[CC BY-SA 2.1 JP, 88, 31, link=https://creativecommons.org/licenses/by-sa/2.1/jp/deed.en, align="center"]
 
 NekoBean by link:http://blog.cgfm.jp/mutsuki/[カネウチカズコ(Kazuko Kaneuchi)] is licensed under a link:https://creativecommons.org/licenses/by-sa/2.1/jp/deed.en[Creative Commons Attribution-ShareAlike 2.1 Japan License]. 
-As for use, please confirm link:#_about_credit[about credit].
+As for use, please confirm xref:nekobean.adoc#_about_credit[about credit].
 
 == Various NekoBeans
 
